--- a/public/menu.html
+++ b/public/menu.html
@@ -116,6 +116,11 @@
         <div id="quest-choose-container" class="quest-choose-container hidden"></div>
         <div id="active-automatic-quest-container"></div>
         
+        <hr style="border-color: rgba(255,255,255,0.1); margin: 15px 0;">
+
+        <div id="manual-quests-list">
+            <div class="spinner"></div>
+        </div>
         <span class="manual-hint" style="display: block; font-size: 11px; color: #ffffff; text-align: center; margin-top: 20px;">
             Все полученные промокоды вы найдёте в разделе
             <span style="color: #ffc700; font-weight: 600;">Профиль</span>.
