--- a/public/menu.html
+++ b/public/menu.html
@@ -84,7 +84,7 @@
                 <div class="shortcut-icon shortcut-shop-bg">
                     <i class="fa-solid fa-cart-shopping"></i>
                 </div>
-                <span class="shortcut-label">Магазин</span>
+                <span class="shortcut-label">Магазин скинов</span>
             </div>
 
             <div class="shortcut-item" id="shortcut-challenge">
