--- a/public/menu.html
+++ b/public/menu.html
@@ -84,7 +84,8 @@
                 <div class="shortcut-icon shortcut-shop-bg">
                     <i class="fa-solid fa-cart-shopping"></i>
                 </div>
-                <span class="shortcut-label">Магазин скинов</span>
+                <span class="shortcut-label">Магазин</span>
+                <span class="shortcut-status" style="opacity: 0;">.</span> 
             </div>
 
             <div class="shortcut-item" id="shortcut-challenge">
@@ -92,6 +93,7 @@
                     <i class="fa-solid fa-star"></i>
                 </div>
                 <span class="shortcut-label">Челленджи</span>
+                <span class="shortcut-status" id="shortcut-challenge-status">...</span>
             </div>
 
             <div class="shortcut-item" id="shortcut-quests">
@@ -99,9 +101,10 @@
                     <i class="fa-solid fa-bolt"></i>
                 </div>
                 <span class="shortcut-label">Испытания</span>
+                <span class="shortcut-status" id="shortcut-quest-status">...</span>
             </div>
         </div>
-
+      
     </div>
 
     <div id="view-shop" class="view hidden">
