--- a/public/admin.html
+++ b/public/admin.html
@@ -44,6 +44,13 @@
                         <div class="icon-wrapper" style="color: var(--twitch-color);"><i class="fa-brands fa-twitch"></i></div>
                         <span>Twitch награды</span>
                     </div>
+                  <div class="admin-icon-button" data-view="view-admin-pending-actions" onclick="document.querySelector('[data-tab=\'shop-prizes\']').click()">
+                        <div class="icon-wrapper" style="color: #ffcc00;">
+                            <i class="fa-solid fa-cart-shopping"></i>
+                            <span class="notification-badge hidden" id="shop-badge-main">0</span>
+                        </div>
+                        <span>Магазин</span>
+                    </div>
                     <div class="admin-icon-button" data-view="view-admin-promocodes">
                         <div class="icon-wrapper"><i class="fa-solid fa-ticket"></i></div>
                         <span>Промокоды</span>
@@ -240,6 +247,7 @@
                 <button class="tab-button active" data-tab="submissions"><i class="fa-solid fa-user-check"></i> Проверки</button>
                 <button class="tab-button" data-tab="event-prizes"><i class="fa-solid fa-trophy"></i> Розыгрыши</button>
                 <button class="tab-button" data-tab="checkpoint-prizes"><i class="fa-solid fa-flag-checkered"></i> Чекпоинт</button>
+                <button class="tab-button" data-tab="shop-prizes"><i class="fa-solid fa-cart-shopping"></i> Магазин</button>
             </div>
             <div id="tab-content-submissions" class="tab-content active">
                 <div class="pending-actions-grid">
