--- a/public/menu.html
+++ b/public/menu.html
@@ -5,8 +5,8 @@
   <title>Меню</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
-  <link rel="stylesheet" href="/public/fontawesome/all.min.css" />
-  <link rel="stylesheet" href="/public/menu.css" />
+  <link rel="stylesheet" href="/fontawesome/css/all.min.css" />
+  <link rel="stylesheet" href="/menu.css" />
 </head>
 <body>
   <div id="loader-overlay" class="loader-overlay">
