--- a/public/menu.html
+++ b/public/menu.html
@@ -63,7 +63,7 @@
                                 <img id="auction-banner-img" src="https://i.postimg.cc/d0r554hc/1200-600.png?v=2" alt="Аукцион">
                         </a>
                   <a id="checkpoint-link" href="/checkpoint" class="slide" data-event="checkpoint" style="text-decoration: none; display: block;">
-                                <img id="checkpoint-banner-img" src="https://i.postimg.cc/6p39wgzJ/1200-324.png" alt="Марафон Чекпоинт" style="width: 100%; display: block;">
+                                <img id="checkpoint-banner-img" src="https://i.postimg.cc/PxJWPNC9/1200-324-(1).png" alt="Марафон Чекпоинт" style="width: 100%; display: block;">
                         </a>
                 </div> <button id="slide-prev-btn" class="slider-arrow prev"><i class="fa-solid fa-chevron-left"></i></button>
                 <button id="slide-next-btn" class="slider-arrow next"><i class="fa-solid fa-chevron-right"></i></button>
@@ -72,7 +72,7 @@
 
         <details class="image-accordion" id="weekly-goals-accordion"> 
             <summary class="image-accordion-summary">
-                <img id="weekly-goals-banner-img" src="https://i.postimg.cc/d0r554hc/1200-600.png?v=2" alt="Недельные испытания" />
+                <img id="weekly-goals-banner-img" src="https://i.postimg.cc/PxJWPNC9/1200-324-(1).png" alt="Недельные испытания" />
             </summary>
             <div id="weekly-goals-container-placeholder"></div>
         </details>
