--- a/public/profile.html
+++ b/public/profile.html
@@ -5,7 +5,7 @@
     <title>Мой профиль</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <link rel="stylesheet" href="/public/fontawesome/all.min.css" />
+    <link rel="stylesheet" href="/fontawesome/css/all.min.css" />
     <style>
         :root {
             --bg-gradient: radial-gradient(ellipse at 50% 100%, #041a07, #000000);
