--- a/public/admin.html
+++ b/public/admin.html
@@ -5,7 +5,7 @@
   <title>Админ-панель</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+  <link rel="stylesheet" href="/fontawesome/css/all.min.css" />
   <link rel="stylesheet" href="admin.css">
 </head>
 <body>
