--- a/public/shop.html
+++ b/public/shop.html
@@ -437,14 +437,14 @@
             <div class="partner-icon"><i class="fa-solid fa-layer-group"></i></div>
             <div class="partner-info">
                 <div class="partner-title">Topskin <span class="hot-badge">Promo</span></div>
-                <div class="partner-desc">Код: <span class="partner-highlight">HATElove</span><br>Кэшбек на заданиях!</div>
+                <div class="partner-desc">Прокод: <span class="partner-highlight">HATElove</span><br>Есть система кэшбека в заданиях!</div>
             </div>
         </a>
         <a href="#" onclick="openPartnerLink('https://xplay.gg/ref/hatelove')" class="partner-card xplay">
             <div class="partner-icon"><i class="fa-solid fa-coins"></i></div>
             <div class="partner-info">
-                <div class="partner-title">Xplay.gg <span class="hot-badge">Free</span></div>
-                <div class="partner-desc">Забирай <span class="partner-highlight">10 монет</span><br>бесплатно за вход.</div>
+                <div class="partner-title">Xplay.gg <span class="hot-badge">Game</span></div>
+                <div class="partner-desc">Забирай <span class="partner-highlight">10 монет</span><br>В заданиях.</div>
             </div>
         </a>
     </div>
