--- a/public/shop.html
+++ b/public/shop.html
@@ -134,7 +134,7 @@
             display: flex;
             gap: 10px;
             padding: 0 16px;
-            width: max-content;
+            width: 100%; /* <--- ТЕПЕРЬ КОНТЕЙНЕР ОГРАНИЧЕН ЭКРАНОМ */
             overflow-x: hidden; /* Скрываем скроллбар */
             /* Важно для стабильности */
             flex-wrap: nowrap;
