--- a/public/shop.html
+++ b/public/shop.html
@@ -556,7 +556,7 @@
                     <div class="partner-desc">
                         Код: <span class="partner-highlight">HATElove</span>
                         <button class="copy-btn" onclick="copyCode(event, 'HATElove')"><i class="fa-regular fa-copy"></i></button>
-                        <br>Кэшбек на заданиях!
+                        <br>Получи кэшбек в ручных заданиях (вкладка задания)!
                     </div>
                 </div>
             </a>
@@ -566,8 +566,8 @@
                     <img src="https://i.postimg.cc/gJXWJccF/0x0.png" loading="eager" alt="Xplay" class="partner-logo-img">
                 </div>
                 <div class="partner-info">
-                    <div class="partner-title">Xplay.gg <span class="hot-badge">Free</span></div>
-                    <div class="partner-desc">Забирай <span class="partner-highlight">10 монет</span><br>бесплатно за вход.</div>
+                    <div class="partner-title">Xplay.gg <span class="hot-badge">Game</span></div>
+                    <div class="partner-desc">Забирай <span class="partner-highlight">Получи 10 монет</span><br>в ручных заданиях за регистрацию (вкладка задания)!</div>
                 </div>
             </a>
         </div>
@@ -660,7 +660,7 @@
                 const resetPoint = itemFullWidth * originalItems.length;
 
                 let scrollPos = 0;
-                const speed = 1.0; 
+                const speed = 0.6; 
 
                 let isDragging = false;
                 let isHovered = false; 
