--- a/public/shop.html
+++ b/public/shop.html
@@ -567,7 +567,7 @@
                 </div>
                 <div class="partner-info">
                     <div class="partner-title">Xplay.gg <span class="hot-badge">Game</span></div>
-                    <div class="partner-desc">Забирай <span class="partner-highlight">Получи 10 монет</span><br>в ручных заданиях за регистрацию (вкладка задания)!</div>
+                    <div class="partner-desc">Получи <span class="partner-highlight">10 монет</span><br>в ручных заданиях за регистрацию (вкладка задания)!</div>
                 </div>
             </a>
         </div>
