--- a/public/shop.html
+++ b/public/shop.html
@@ -826,7 +826,7 @@
                     buttonHtml = `<button class="action-btn btn-folder" onclick="openFolder(${item.id})">Открыть <i class="fa-solid fa-chevron-right" style="font-size:10px; margin-left:3px;"></i></button>`;
                     clickAction = `openFolder(${item.id})`;
                 } else {
-                    priceText = `<div class="item-price">${item.price} ⭐️</div>`;
+                    priceText = `<div class="item-price">${item.price} 🥮️</div>`;
                     
                     let isOutOfStock = false;
                     if (item.count === null) {
