--- a/public/shop.html
+++ b/public/shop.html
@@ -531,7 +531,7 @@
             <i class="fa-solid fa-chevron-left"></i> <span id="nav-title">Назад</span>
         </button>
         <div class="balance-display">
-            <span id="user-balance">...</span> <i class="fa-solid fa-star"></i>
+            <span id="user-balance">...</span> <i class="fa-solid fa-coins"></i>
         </div>
     </div>
 
