--- a/public/halloween.html
+++ b/public/halloween.html
@@ -148,11 +148,27 @@
     <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExdDd2azc1aXVvcmE3eG81a3FxZDlya2M4c3NmNDZweHFnOW8za3d2eiZlcD12MV9pbnRlcm5hbF_naWZfYnlfaWQmY3Q9cw/GqegZvkq9kgxuk1kTC/giphy.gif" alt="Flying Witch" class="flying-witch">
 
     <footer class="app-footer">
-      <a href="/menu" class="footer-item"><div class="icon-wrapper"><i class="fa-solid fa-house"></i></div><span>ГЛАВНАЯ</span></a>
-      <a href="/events" class="footer-item active"><div class="icon-wrapper"><i class="fa-solid fa-gift"></i></div><span>ИВЕНТЫ</span></a>
-      <a href="/checkpoint" class="footer-item"><div class="icon-wrapper"><i class="fa-solid fa-battery-three-quarters"></i></div><span>ЧЕКПОИНТ</span></a>
-      <a href="/profile" class="footer-item"><div class="icon-wrapper"><i class="fa-solid fa-user"></i></div><span>ПРОФИЛЬ</span></a>
-    </footer>
+    <a href="/leaderboard" class="footer-item">
+        <div class="icon-wrapper"><i class="fa-solid fa-trophy"></i></div>
+        <span>Лидерборд</span>
+    </a>
+    <a href="/menu#quests" class="footer-item">
+        <div class="icon-wrapper"><i class="fa-solid fa-check-double"></i></div>
+        <span>Задания</span>
+    </a>
+        <a href="/menu" class="footer-item">
+        <div class="icon-wrapper"><i class="fa-solid fa-house"></i></div>
+        <span>Главная</span>
+    </a>
+    <a href="/events" class="footer-item">
+        <div class="icon-wrapper"><i class="fa-solid fa-fire"></i></div>
+        <span>Гринд</span>
+    </a>
+    <a href="/auction" class="footer-item">
+        <div class="icon-wrapper"><i class="fa-solid fa-gavel"></i></div>
+        <span>Аукцион</span>
+    </a>
+</footer>
 
     <script src="halloween.js"></script>
 </body>
