--- a/public/profile.html
+++ b/public/profile.html
@@ -771,7 +771,7 @@ try {
         dom.settingsList.appendChild(twitchCard);
 
         // --- 👇 ВОТ СЮДА ВСТАВЛЯЕМ РЕФЕРАЛКУ 👇 ---
-        
+        /*
         // 4. Реферальная программа
         const refCard = document.createElement('div');
         refCard.className = 'settings-card ref-card-gradient';
@@ -789,7 +789,7 @@ try {
         dom.settingsList.appendChild(refCard);
         
         // Вызов проверки приветствия (для Миши)
-        checkWelcomeBonus(userData);
+        checkWelcomeBonus(userData);*/
     }
     // --- ЛОГИКА УВЕДОМЛЕНИЙ (С ПАКЕТНОЙ ОТПРАВКОЙ) ---
     let batchTimeout;       
