--- a/public/profile.html
+++ b/public/profile.html
@@ -501,7 +501,7 @@
 
     <div id="referral-popup" class="custom-popup-overlay">
         <div class="custom-popup" style="text-align: left;">
-            <h3 style="text-align: center; margin-bottom: 5px;">🤝 Партнерская программа</h3>
+            <h3 style="text-align: center; margin-bottom: 5px;">Реферальная система</h3>
             <p style="text-align: center; font-size: 12px; margin-bottom: 20px;">Зови друзей и получай бонусы!</p>
             
             <div style="display: flex; gap: 10px; margin-bottom: 15px;">
