--- a/public/menu.html
+++ b/public/menu.html
@@ -254,7 +254,7 @@
               <a href="https://t.me/hatelovettv" target="_blank" id="sub-link-btn" class="popup-btn secondary" style="text-decoration:none; line-height:40px; display:none;">
                   Подписаться
               </a>
-              <button class="popup-btn secondary" onclick="document.getElementById('welcome-popup').classList.remove('visible')">Позже</button>
+              <button id="later-btn" class="popup-btn secondary">Позже</button>
           </div>
       </div>
   </div>
