--- a/public/menu.html
+++ b/public/menu.html
@@ -15,7 +15,10 @@
 
   <main id="main-content" class="main-content">
 
-    <div class="start-tutorial-btn-wrapper">
+    <div class="start-tutorial-btn-wrapper" style="gap: 10px; display: flex; justify-content: flex-end;">
+    <button id="open-bonus-btn" class="hidden" style="background: rgba(255, 215, 0, 0.15); color: #FFD700; border: 1px solid #FFD700; padding: 6px 12px; border-radius: 16px; font-size: 12px; font-weight: 500; cursor: pointer;">
+        <i class="fa-solid fa-gift"></i> Бонус
+    </button>
         <button id="start-tutorial-btn"><i class="fa-solid fa-circle-question"></i> Как пользоваться?</button>
     </div>
 
@@ -226,7 +229,7 @@
           <p style="color:#ccc; font-size:13px; line-height:1.4;">Выполни условия и забери стартовый пак:</p>
           
           <div style="background: rgba(255, 215, 0, 0.1); border: 1px solid #FFD700; padding: 15px; border-radius: 12px; margin: 15px 0;">
-              <div style="font-size: 24px; font-weight: 800; color: #FFD700;">+10 МОНЕТ</div>
+              <div style="font-size: 24px; font-weight: 800; color: #FFD700;">+10 ГРИНД.МОНЕТ</div>
               <div style="font-size: 12px; color: #ccc; margin-top:5px;">🚀 +0.20 к Гринду (7 дней)</div>
               <div style="font-size: 12px; color: #ccc;">🎟️ +1 Билет ежедневно (7 дней)</div>
           </div>
