--- a/public/events.html
+++ b/public/events.html
@@ -495,7 +495,7 @@ document.addEventListener('DOMContentLoaded', function() {
             
             if ((now - activatedTime) < sevenDays) {
                 totalBonus += 0.2;
-                boostsHTML += `<div class="boost-row"><span class="boost-vip">⚡ VIP Новичок:</span><span class="boost-vip">+0.2</span></div>`;
+                boostsHTML += `<div class="boost-row"><span class="boost-vip">⚡ Новичок:</span><span class="boost-vip">+0.2</span></div>`;
             }
         }
         
