--- a/public/events.html
+++ b/public/events.html
@@ -554,7 +554,7 @@ document.addEventListener('DOMContentLoaded', function() {
         
         // Теперь эта строка не вызовет ошибку
         if (isVipActive()) {
-            dom.ticketSubtitle.textContent = "VIP: +2 билета / 24ч";
+            dom.ticketSubtitle.textContent = "Новичок: +2 билета / 24ч";
             dom.ticketSubtitle.style.color = "#FFD700";
         }
     }
