--- a/public/menu.html
+++ b/public/menu.html
@@ -232,7 +232,7 @@
           <p style="color:#ccc; font-size:13px; line-height:1.4;">Выполни условия и забери стартовый пак:</p>
           
           <div style="background: rgba(255, 215, 0, 0.1); border: 1px solid #FFD700; padding: 15px; border-radius: 12px; margin: 15px 0;">
-              <div style="font-size: 24px; font-weight: 800; color: #FFD700;">+10 ГРИНД.МОНЕТ</div>
+              <div style="font-size: 24px; font-weight: 800; color: #FFD700;">+10 ГРИНД МОНЕТ</div>
               <div style="font-size: 12px; color: #ccc; margin-top:5px;">🚀 +0.20 к Гринду (7 дней)</div>
               <div style="font-size: 12px; color: #ccc;">🎟️ +1 Билет ежедневно (7 дней)</div>
           </div>
