--- a/public/profile.html
+++ b/public/profile.html
@@ -727,7 +727,7 @@ try {
         } finally { hideLoader(); }
     }
 
-    function renderSettings(userData) {
+    function renderSettingsList(userData) {
         dom.settingsList.innerHTML = '';
         
         // --- STEAM CARD ---
