--- a/public/profile.html
+++ b/public/profile.html
@@ -1082,8 +1082,9 @@ try {
         if (steamTrustClose) {
             steamTrustClose.addEventListener('click', () => {
                 document.getElementById('steam-trust-popup').classList.remove('visible');
-        });
-    };
+            });
+        } // <--- ВОТ ЭТА СКОБКА БЫЛА ПРОПУЩЕНА
+    });
 
 } catch (e) { document.body.innerHTML = `<h1 style="text-align:center">Error: ${e.message}</h1>`; }
 </script>
