--- a/public/profile.html
+++ b/public/profile.html
@@ -548,15 +548,25 @@
             <h3>Безопасно ли это?</h3>
             
             <div style="text-align: left; font-size: 13px; color: #ccc; line-height: 1.5; margin-bottom: 20px;">
-                <p style="margin-bottom: 10px;">
-                    Мы используем <b>официальную авторизацию Twitch (OAuth)</b>. Это тот же метод, который используют крупные сайты (Streamlabs, Twitch Drops).
-                </p>
-                <ul style="padding-left: 20px; margin: 0;">
-                    <li>🔒 <b>Приложение НЕ видит ваш пароль.</b></li>
-                    <li>✅ Приложение получает только ваш <b>Никнейм</b> и <b>ID</b>.</li>
-                    <li>📺 Это нужно, чтобы автоматически начислять награды за просмотр стрима и сообщения в чате.</li>
-                </ul>
-            </div>
+    <p style="margin-bottom: 10px;">
+        Мы используем <b>официальную авторизацию Twitch (OAuth)</b>. Это тот же метод, который используют крупные сайты (Streamlabs, Twitch Drops).
+    </p>
+    <ul style="padding-left: 20px; margin: 0;">
+        <li>🔒 <b>Приложение НЕ видит ваш пароль.</b></li>
+        <li>✅ Приложение получает только ваш <b>Никнейм</b> и <b>ID</b>.</li>
+        <li>📺 Это нужно для автоматического начисления наград.</li>
+    </ul>
+    
+    <div style="margin-top: 15px; padding-top: 10px; border-top: 1px solid #444;">
+        <p style="margin: 0;">
+            💡 <b>Совет:</b> Не хотите вводить пароль здесь?
+            <br><br>
+            Сначала откройте сайт <b>twitch.tv</b> и авторизуйтесь <u>во встроенном браузере Telegram</u> (не выходя из приложения, <b> это обязательно! </b>).
+            <br><br>
+            После этого нажмите нашу кнопку — вход произойдет <b>автоматически и мгновенно</b>, так как Telegram уже будет знать вашу сессию.
+        </p>
+    </div>
+</div>
 
             <div class="popup-actions">
                 <button id="twitch-trust-close" class="popup-btn primary">Всё понятно</button>
