--- a/public/profile.html
+++ b/public/profile.html
@@ -598,7 +598,7 @@
                             <br><br>
                             Сначала откройте сайт <b>twitch.tv</b> и авторизуйтесь <u>во встроенном браузере Telegram</u> (не выходя из приложения, <b>это обязательно!</b>).
                             <br><br>
-                            После этого нажмите нашу кнопку — вход произойдет <b>автоматически и мгновенно</b>, так как Telegram уже будет знать вашу сессию.
+                            После этого нажмите нашу кнопку - вход произойдет <b>автоматически и мгновенно</b>, так как Telegram уже будет знать вашу сессию.
                         </p>
                     </div>
                 </div>
