--- a/public/halloween.html
+++ b/public/halloween.html
@@ -76,14 +76,8 @@
             </section>
 
             <section class="default-reward-section">
-                <h3 class="subsection-title"><i class="fa-solid fa-box-open"></i> Награда для участников которые не вошли в топ 20</h3>
-                <div id="reward-card" class="reward-card">
-                    <div id="default-reward-zoom-container" class="image-zoom-container">
-                        <img id="reward-image" src="" alt="Default Reward">
-                        <div class="zoom-icon"><i class="fa-solid fa-magnifying-glass"></i></div>
-                    </div>
-                    <p id="reward-name">Название предмета</p>
-                </div>
+                <h3 class="subsection-title"><i class="fa-solid fa-box-open"></i> Награды для остальных</h3>
+                <div id="tier-rewards-list" class="tier-rewards-grid"></div>
             </section>
         </div>
     </main>
