--- a/public/halloween.html
+++ b/public/halloween.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
     <link rel="stylesheet" href="halloween.css">
 </head>
+<body data-theme="new_year">
+    
+    <video class="garland-video" 
+           src="public/63490396bb2a26f07153272fc62db7a0.webm" 
+           autoplay 
+           loop 
+           muted 
+           playsinline>
+    </video>
+    <div id="tutorial-overlay" class="tutorial-overlay hidden"></div>
 <body data-theme="halloween">
     <div id="tutorial-overlay" class="tutorial-overlay hidden"></div>
 
